--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,11 @@ language: node_js
 node_js:
     - "8.10.0"
 
+before_install:
+  - npm i -g npm
+
 install:
-  - npm install
+  - npm ci
 
 cache:
   directories:
