@dev fix comma && add email recall

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,3 +18,9 @@ cache:
 script:
   - npm run lint
   - npm run test
+
+email:
+  recipients:
+    - syytest11@163.com
+  on_success: always
+  on_failure: always
